--- a/style.css
+++ b/style.css
@@ -10,10 +10,29 @@
     color: white;
     display: flex;
     align-items: center;
-    }
+    justify-content: space-evenly;
+}
+
+.nav-logo {
+    height: 50px;
+    width: 120px;
+}
+
+.logo {
+    
+    background-image: url("logo.png");
+    background-size: auto;
+    height: 45px;
+    width: 110px;
+    font-size: 30px;
+}
 
 .border {
     border: 1.5px solid transparent;
+}
+
+.border:hover {
+    border: 1.5px solid white;
 }
 
 /** box2**/
@@ -36,10 +55,15 @@
 /*box3*/
 .nav-search {
     display: flex;
+    justify-content: space-evenly;
     background-color: pink;
     width: 600px;
     height: 40px;
     border-radius: 4px;
+}
+
+.nav-search:hover {
+    border: 2px solid orange;
 }
 
 .search-select {
@@ -60,6 +84,7 @@
 .search-icon {
     width: 45px;
     display: flex;
+    justify-content: center;
     align-items: center;
     font-size: 1.2rem;
     background-color: #febd68;
@@ -95,6 +120,7 @@ span {
     display: flex;
     color: white;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .panel-ops p {
@@ -105,6 +131,8 @@ span {
 .panel-ops {
     width: 80%;
     font-size: 0.85rem;
+    color:white;
+
 }
 
 .panel-deals {
@@ -118,6 +146,7 @@ span {
     background-size: cover;
     height: 350px;
     display: flex;
+    justify-content: center;
     align-items: flex-end;
 }
 
@@ -126,6 +155,7 @@ span {
     color: black;
     height: 40px;
     display: flex;
+    justify-content: center;
     align-items: center;
     font-size: 0.85rem;
     width: 90%;
@@ -140,6 +170,7 @@ span {
 .shop-section {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
     background-color: #f7a9d8;
 }
 
@@ -178,6 +209,7 @@ footer {
     color: white;
     height: 50px;
     display: flex;
+    justify-content: center;
     align-items: center;
     font-size: 0.85rem;
 }
@@ -187,8 +219,12 @@ footer {
     color: white;
     height: 300px;
     display: flex;
+    justify-content: space-evenly;
 }
 
+.foot-panel2 a:hover {
+    text-decoration: underline;
+}
 
 ul {
     margin-top: 20px;
@@ -207,7 +243,9 @@ ul a {
     border-top: 0.5px solid white; 
     height: 70px;
     display: flex;
+    justify-content: center;
     align-items: center;
+    font-size: 10px;
 }
 
 .logo {
@@ -234,7 +272,24 @@ ul a {
     padding-left: 50px;
 }
 
+.pages a:hover {
+    text-decoration: underline;
+}
 
 .copyright {
     padding-top: 5px;
+}
+
+.button {
+    margin-left: 100px;
+    margin-bottom: 100px;
+    background-color:gray;
+    border-radius: 30%;
+}
+
+.last-logo {
+    color: #f4f4f9;
+    background-color: #222f3d;
+    text-align: center;
+    font-size: 30px;
 }
